tests/conformance/negative/12-tool-allow-deny-conflict.sml
<!-- Error: allow and deny are mutually exclusive on <tool> -->
<tool allow="bash" deny="grep">
  some content
</tool>
